@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction


class Platform{

}

class Adress {
 -String street
 -int doorNumber
 -String postalCode
 -String locality
 -Float decimalDegree1
 -Float decimalDegree2
}

class Pharmacy{
-String id
-String designation
-String password
-String email
-Adress address
-ParkingLot park
-ProductList pl
-AvailableScooterList asl
}

Platform"1" -- "0..*"Pharmacy : has >

Pharmacy"1" -- "1" Adress : has >

@enduml